# embedded-charts

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  deny.toml  lcov.info
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  benchmarks.yml  ci.yml  issue-management.yml  release.yml  security.yml
benches/: README.md  baseline_performance.rs  chart_benchmarks.rs  chart_rendering.rs  data_operations.rs  display_optimizations.rs  interpolation.rs  memory_benchmarks.rs  memory_usage.rs  platform_benchmarks.rs  platform_optimizations.rs  simple_benchmarks.rs  simple_display_bench.rs  v0_4_0_performance.rs
coverage_report/html/: index.html
coverage_report/html/coverage/home/tasuku/com/github/signal-slot/embedded-charts/src/: animation.rs.html  error.rs.html  fluent.rs.html  heapless_utils.rs.html  layout.rs.html  lib.rs.html  memory.rs.html  prelude.rs.html  render.rs.html  time.rs.html
coverage_report/html/coverage/home/tasuku/com/github/signal-slot/embedded-charts/src/axes/: builder.rs.html  linear.rs.html  mod.rs.html  range.rs.html  scale.rs.html  style.rs.html  ticks.rs.html  traits.rs.html
coverage_report/html/coverage/home/tasuku/com/github/signal-slot/embedded-charts/src/chart/: bar.rs.html  curve.rs.html  custom.rs.html  gauge.rs.html  line.rs.html  pie.rs.html  scatter.rs.html  stacked.rs.html  traits.rs.html
coverage_report/html/coverage/home/tasuku/com/github/signal-slot/embedded-charts/src/dashboard/: grid.rs.html  layout.rs.html  mod.rs.html  simple.rs.html
coverage_report/html/coverage/home/tasuku/com/github/signal-slot/embedded-charts/src/data/: aggregation.rs.html  bounds.rs.html  point.rs.html  ring_buffer.rs.html  series.rs.html  streaming.rs.html
coverage_report/html/coverage/home/tasuku/com/github/signal-slot/embedded-charts/src/grid/: builder.rs.html  mod.rs.html  style.rs.html  traits.rs.html  types.rs.html
coverage_report/html/coverage/home/tasuku/com/github/signal-slot/embedded-charts/src/legend/: builder.rs.html  mod.rs.html  position.rs.html  style.rs.html  traits.rs.html  types.rs.html
coverage_report/html/coverage/home/tasuku/com/github/signal-slot/embedded-charts/src/math/: backends.rs.html  interpolation.rs.html  mod.rs.html
coverage_report/html/coverage/home/tasuku/com/github/signal-slot/embedded-charts/src/style/: colors.rs.html  fonts.rs.html  gradient.rs.html  line.rs.html  themes.rs.html
docs/: ADDING_GIF_CAPTURE.md  BENCHMARK_TRACKING.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  EXAMPLES.md  GENERATE_RING_BUFFER_GIF.md  RELEASE_PLAN_v0.3.0.md  TEST_COVERAGE_PLAN.md  V0.3.0_RELEASE_PLAN.md  V0.4.0_RELEASE_PLAN.md
docs/issues/: v0.4.0-release-tracking.md
examples/: memory_report.rs  platform_optimized_chart.rs  simple_bar_chart.rs  simple_line_chart.rs  simple_pie_chart.rs
examples/basic/: axis_demo.rs  bar_chart.rs  bubble_chart.rs  chart_animation_demo.rs  dashboard_layout_demo.rs  dashboard_layouts_showcase.rs  dashboard_simple.rs  data_aggregation_demo.rs  data_transition_demo.rs  donut_chart.rs  gauge_chart.rs  gradient_showcase.rs  legend_demo.rs  line_chart.rs  logarithmic_scale_demo.rs  pie_chart.rs  production_ready_demo.rs  ring_buffer_demo.rs  scatter_chart.rs  simple_animation_demo.rs  smooth_curve_demo.rs  stacked_bar_chart.rs  stacked_line_chart.rs  streaming_animation_demo.rs  temperature_monitor.rs  theme_showcase.rs  time_provider_demo.rs
examples/common/: capture.rs  display.rs  mod.rs  window.rs
examples/interactive/: interactive_scatter_demo.rs  multi_series_chart.rs  multi_series_dashboard.rs  real_time_dashboard.rs  unified_streaming_demo.rs
scripts/: capture_gifs.sh  generate_assets.sh  run_benchmarks.sh
src/: animation.rs  error.rs  fluent.rs  heapless_utils.rs  layout.rs  lib.rs  memory.rs  prelude.rs  render.rs  time.rs
src/axes/: builder.rs  linear.rs  mod.rs  range.rs  scale.rs  style.rs  ticks.rs  traits.rs
src/chart/: bar.rs  curve.rs  custom.rs  gauge.rs  line.rs  mod.rs  pie.rs  scatter.rs  stacked.rs  traits.rs
src/dashboard/: grid.rs  layout.rs  mod.rs  panel.rs  panel_simple.rs  simple.rs
src/data/: aggregation.rs  bounds.rs  mod.rs  point.rs  ring_buffer.rs  series.rs  streaming.rs
src/grid/: builder.rs  mod.rs  style.rs  traits.rs  types.rs
src/legend/: builder.rs  mod.rs  position.rs  style.rs  traits.rs  types.rs
src/math/: backends.rs  interpolation.rs  mod.rs  traits.rs
src/memory/: pool.rs
src/platform/: arm.rs  esp32.rs  mod.rs  riscv.rs
src/render/: base.rs  mod.rs  optimized.rs
src/style/: colors.rs  fonts.rs  gradient.rs  line.rs  mod.rs  themes.rs
tests/: animation_comprehensive.rs  animation_integration_tests.rs  axes_linear_comprehensive.rs  axes_linear_edge_cases.rs  axes_ticks_comprehensive.rs  axes_ticks_coverage_improvement.rs  axes_ticks_edge_cases.rs  axes_ticks_legacy_tests.rs  axes_traits_comprehensive.rs  axis_scales_comprehensive.rs  bar_chart_comprehensive.rs  chart_curve_tests.rs  colors_comprehensive.rs  curve_chart_comprehensive.rs  dashboard_simple.rs  data_aggregation_comprehensive.rs  data_bounds_comprehensive.rs  data_series_comprehensive.rs  error_comprehensive.rs  gradient_comprehensive.rs  grid_mod_comprehensive.rs  grid_traits_comprehensive.rs  grid_types_comprehensive.rs  integration_tests.rs  layout_comprehensive.rs  line_chart_comprehensive.rs  line_style_comprehensive.rs  math_interpolation_comprehensive.rs  memory_comprehensive.rs  platform_tests.rs  render_comprehensive.rs  ring_buffer_tests.rs  stacked_chart_comprehensive.rs
tests/common/: chart_testing.rs  data_generators.rs  mod.rs  performance.rs  visual_testing.rs
